# hw3-Sunghyunahn123

./: Makefile  README.md  ai_documentation.txt  pyproject.toml
.github/workflows/: deploy.yml
.ipynb_checkpoints/: ai_documentation-checkpoint.txt
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py
